Fixed dialog box title overlapping close button at certain resolutions.

--- a/default.css
+++ b/default.css
@@ -241,6 +241,7 @@ body
 	top: -2rem;
 	height: fit-content;
 	padding-bottom: 0px;
+	width: 95%;
 }
 
 .dialog_box_desc
